# Gear_Academy_Exercises

./: README.md
Tamagotchi-01/: Cargo.toml  README.md
Tamagotchi-04/: Cargo.toml  README.md
Tamagotchi-04/upload/: Cargo.toml
